--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,9 +8,9 @@
 		<title>Clevercouch | stuff</title>
 		
 		<link rel="stylesheet" href="https://use.typekit.net/emr2ogr.css">
-		
+		<link href="/@fs/styles/global.css" rel="stylesheet" />
 		<link href="/src/styles/global.css" rel="stylesheet" />
-		<link href="/@fs/src/styles/global.css" rel="stylesheet" />
+		
 		<script src="/src/js/custom.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
