--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,16 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Clevercouch | stuff</title>
 		
-		<link rel="stylesheet" href="https://use.typekit.net/emr2ogr.css">
+		<link rel="preconnect" href="https://use.typekit.net" crossorigin />
+		<link rel="dns-prefetch" href="https://use.typekit.net" />
+		
+		<link 
+		  rel="stylesheet" 
+		  href="https://use.typekit.net/emr2ogr.css" 
+		  media="print" 
+		  onload="this.media='all'" 
+		/>
+		
 		<link href="/@fs/styles/global.css" rel="stylesheet" />
 		<link href="/src/styles/global.css" rel="stylesheet" />
 		
