--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import TopNavigation from '../components/TopNavigation.astro';
+import Hero from '../components/Hero.astro';
 import Content from '../components/Content.astro';
 import AboutUs from '../components/AboutUs.astro';
 import ContactUs from '../components/ContactUs.astro';
@@ -12,6 +13,7 @@ import Footer from '../components/Footer.astro';
 
 <Layout>
 	<TopNavigation />
+	<Hero />
 	<Content />
 	<AboutUs />
 	<ContactUs />
