--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,7 @@
 		
 		<script src="/src/js/custom.js" crossorigin="anonymous"></script>
 	</head>
-	<body>
-		<slot />
+	<body class="bg-blueprint font-sans text-charcoal selection:bg-sand-accent">
+	   <slot />
 	</body>
 </html>
