--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,7 @@
 <section id="hero" class="relative overflow-hidden pt-28 pb-20 md:pt-40 md:pb-32 bg-parchment-light">
 	<div class="absolute inset-0 z-0 opacity-70">
 		<img 
-			src="abstract-wave.png" 
+			src="https://clevercouch.s3.us-west-2.amazonaws.com/img/abstract-wave-min.png" 
 			alt="Abstract organic green and sand wave graphic" 
 			class="w-full h-full object-cover object-center pointer-events-none"
 		/>
@@ -20,11 +20,6 @@
 			</p>
 		</header>
 
-		<a 
-			href="#process" 
-			class="inline-block px-10 py-4 text-lg uppercase tracking-wider font-bold text-white bg-sand-accent border-2 border-sand-accent hover:bg-charcoal hover:border-charcoal transition duration-300 shadow-lg"
-		>
-			View Our Process
-		</a>
+		
 	</div>
 </section>
