fixed header and seo

--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -67,7 +67,8 @@ import GrowthSlider from '../components/GrowthSlider.jsx';
 					<div class="bg-gray-code h-96 rounded-lg overflow-hidden border border-hacker-green/50">
 						<p class="p-4 text-center text-sm font-mono-subhead text-hacker-green/80">
 							<img src="https://clevercouch.s3.us-west-2.amazonaws.com/img/mcmtechnology-min.png"
-							class="w-full h-full object-cover object-center pointer-events-none" />
+							class="w-full h-full object-cover object-center pointer-events-none" 
+							alt="Screenshot of mcmtechnology.com website"/>
 						</p>
 						<div class="flex items-center justify-center h-full">
 							
