--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -64,7 +64,7 @@ import GrowthSlider from '../components/GrowthSlider.jsx';
 			<div class="md:grid md:grid-cols-12 md:gap-12 items-center">
 				
 				<div class="md:col-span-7 mb-8 md:mb-0 relative">
-					<div class="bg-gray-code h-96 rounded-lg overflow-hidden border border-hacker-green/50">
+					<div class="bg-gray-code h-100 rounded-lg overflow-hidden">
 						<p class="p-4 text-center text-sm font-mono-subhead text-hacker-green/80">
 							<img src="https://clevercouch.s3.us-west-2.amazonaws.com/img/mcmtechnology-min.png"
 							class="w-full h-full object-cover object-center pointer-events-none" 
