--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = true;
 import Layout from '../layouts/Layout.astro';
 import TopNavigation from '../components/TopNavigation.astro';
 import Hero from '../components/Hero.astro';
