--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,9 +34,9 @@
 		  onload="this.media='all'" 
 		/>
 		
-		<link href="/src/styles/global.css" rel="stylesheet" />
+		<link href="/global.css" rel="stylesheet" />
 		
-		<script src="/src/js/custom.js" crossorigin="anonymous"></script>
+		<script src="/custom.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="bg-blueprint font-sans text-charcoal selection:bg-sand-accent">
 	   <slot />
