--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -48,10 +48,9 @@ const {
 		  onload="this.media='all'" 
 		/>
 		
-		<link href="/@fs/styles/global.css" rel="stylesheet" />
-		<link href="/src/styles/global.css" rel="stylesheet" />
+		<link href="/global.css" rel="stylesheet" />
 		
-		<script src="/src/js/custom.js" crossorigin="anonymous"></script>
+		<script src="/custom.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="bg-blueprint font-sans text-charcoal selection:bg-sand-accent">
 	   <slot />
